[package]
name = "az_smart_contract_hub"
version = "0.1.0"
authors = ["btn.group"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
az_groups = { path = "az_groups", default-features = false, features = ["ink-as-dependency"] }
ink_e2e = { version = "4.3" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "az_groups/std"
]
ink-as-dependency = []
e2e-tests = []

[workspace]
members = [
    "az_groups",
]
